--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -12,4 +12,5 @@
 @import "./modules/_faq.css";
 @import "./modules/_testimonial.css";
 @import "./modules/_strip.css";
+@import "./modules/_input.css";
 @import "./modules/_footer.css";
