--- a/app/assets/styles/modules/_faq.css
+++ b/app/assets/styles/modules/_faq.css
@@ -74,7 +74,7 @@
     overflow: hidden;
     transition: height 0.3s linear;
     margin-bottom: 1rem;
-    background: #274761;
+    background: #1022302e;
     box-shadow: 0px 20px 40px rgba(3, 0, 77, 0.04);
     border-radius: 8px;
     width: 100%;
