--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,48 +1,37 @@
 .testimonial {
-  &__text {
-    width: 100%;
-    small {
-      font-size: 0.9rem;
-      color: rgba(24, 59, 86, 0.81);
-    }
+  &__box {
+    border-radius: 13px;
+    margin-bottom: 2rem;
+    box-shadow: 0px 4px 22px 3px rgba(0, 0, 0, 0.11);
   }
-  &__label::before {
-    content: "";
-    height: 1px;
-    width: 15px;
-    margin-right: 15px;
-    background: rgba(24, 59, 86, 0.74);
-    display: inline-block;
-    vertical-align: middle;
-  }
-  &__img {
-    width: 100%;
-    border-radius: 15px;
-    img {
-      max-width: 100%;
-    }
-  }
-  &__inner-text {
-    font-size: 1.4rem;
+  &__avatar {
+    width: 115px;
+    height: 115px;
+    min-width: 115px;
+    border-radius: 50%;
+    border: 4px solid #fff;
     font-weight: 500;
-    color: #183b56;
-  }
-  &__control {
-    width: 70px;
+    overflow: hidden;
     img {
-      cursor: pointer;
+      width: 100%;
     }
   }
-  &__section {
-    padding-bottom: 9rem;
+  &__text {
+    font-size: 1.2rem;
+    margin-bottom: 0.7rem;
+    color: rgba(25, 60, 87, 0.86);
+    line-height: 1.6;
   }
-}
-
-@media (min-width: 767px) {
-  .testimonial__img {
-    width: 30%;
+  &__label {
+    color: #738899;
+    font-size: 0.89rem;
   }
-  .testimonial__text {
-    width: 69%;
+  &__bg {
+    bottom: 0;
+    right: 0;
+    &-two {
+      left: 0;
+      top: 0;
+    }
   }
 }
