--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,4 +13,7 @@
 @import "./modules/_testimonial.css";
 @import "./modules/_strip.css";
 @import "./modules/_input.css";
+@import "./modules/_rating.css";
+@import "./modules/_about.css";
+@import "./modules/_blog-list.css";
 @import "./modules/_footer.css";
