--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -1,10 +1,14 @@
 .c-header {
   min-height: 100vh;
   overflow: hidden;
-  padding: 9rem 0;
+  padding: 9rem 4rem;
   background: #fafcff;
   mix-blend-mode: normal;
   overflow: hidden;
+
+  &--about {
+    min-height: auto;
+  }
 
   &__btn {
     background: #fff;
@@ -63,6 +67,9 @@
       width: 100%;
     }
   }
+  &__hero-img {
+    z-index: 22;
+  }
 }
 
 @media (min-width: 567px) {
@@ -75,10 +82,15 @@
   .c-header {
     padding: 11rem 0;
   }
+
+  .c-header--about {
+    padding: 9rem 0 4rem 0;
+  }
+
   .c-header__img-container {
     width: 52%;
   }
   .c-header__title {
-    font-size: 4rem;
+    font-size: 3.7rem;
   }
 }
