--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -6,6 +6,10 @@
   mix-blend-mode: normal;
   overflow: hidden;
 
+  &--login {
+    padding: 7rem 0 0 0;
+  }
+
   &--about {
     min-height: auto;
   }
@@ -81,6 +85,10 @@
   }
   .c-header {
     padding: 11rem 0;
+  }
+
+  .c-header--login {
+    padding: 7rem 0 0 0;
   }
 
   .c-header--about {
