--- a/app/assets/styles/modules/_nav.css
+++ b/app/assets/styles/modules/_nav.css
@@ -32,7 +32,7 @@
       font-size: 1.4rem;
     }
     &:hover {
-      color: var(--success);
+      color: var(--success) !important;
       text-decoration: none;
     }
     &--call-to-action {
@@ -45,7 +45,9 @@
       }
     }
   }
-
+  a.text-success:hover {
+    color: #fff !important;
+  }
   &.bg-white .nav__menu-icon__line {
     background: var(--primary);
 
@@ -77,7 +79,7 @@
       height: 3px;
       width: 100%;
       display: block;
-      background: white;
+      background: #117a8b;
 
       &::before {
         content: "";
@@ -85,7 +87,7 @@
         height: 3px;
         display: block;
         transform-origin: center;
-        background: white;
+        background: #117a8b;
         position: absolute;
         top: -10px;
         transition: all 0.5s;
@@ -96,7 +98,7 @@
         height: 3px;
         display: block;
         transform-origin: center;
-        background: white;
+        background: #117a8b;
         position: absolute;
         top: 10px;
         transition: all 0.5s;
@@ -106,17 +108,17 @@
         height: 3px;
         width: 0%;
         display: block;
-        background: var(--primary);
+        background: #117a8b;
 
         &::before {
           top: 0px;
           transform: rotate(45deg);
-          background: var(--primary);
+          background: #117a8b;
         }
         &::after {
           top: 0px;
           transform: rotate(-45deg);
-          background: var(--primary);
+          background: #117a8b;
         }
       }
     }
