--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -16,4 +16,6 @@
 @import "./modules/_rating.css";
 @import "./modules/_about.css";
 @import "./modules/_blog-list.css";
+@import "./modules/_login.css";
+@import "./modules/_form.css";
 @import "./modules/_footer.css";
