--- a/app/assets/styles/modules/_blog-list.css
+++ b/app/assets/styles/modules/_blog-list.css
@@ -12,6 +12,7 @@
   &__title {
     color: #193c57;
     font-weight: 700;
+    font-size: 1.3rem !important;
   }
   &__content {
     padding: 1rem 0.6rem;
