--- a/app/assets/styles/global/_global.css
+++ b/app/assets/styles/global/_global.css
@@ -147,3 +147,26 @@ p {
   left: 0;
   z-index: 22;
 }
+
+.shape-right {
+  top: 0;
+  right: 0;
+}
+
+.logo__container {
+  box-shadow: 0px 4px 29px 7px rgba(48, 169, 113, 0.14);
+  border-radius: 23px;
+}
+
+.curve-pattern {
+  bottom: 0;
+  right: 0;
+  &--two {
+    top: 0;
+    left: 0;
+  }
+}
+
+a:hover {
+  text-decoration: none;
+}
