--- a/app/assets/styles/modules/_input.css
+++ b/app/assets/styles/modules/_input.css
@@ -1,6 +1,8 @@
 .c-input {
   border: none;
   padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  width: 100%;
 
   &:focus {
     outline: none;
@@ -14,11 +16,17 @@
     border-radius: 5px;
     overflow: hidden;
     height: 61px;
-    width: 342px;
+    width: 100%;
     position: relative;
     &--focused {
       filter: drop-shadow(0px 4px 4px rgba(50, 50, 71, 0.08)),
         drop-shadow(0px 4px 8px rgba(50, 50, 71, 0.06));
     }
+  }
+}
+
+@media (min-width: 576px) {
+  .c-input__container {
+    width: 342px;
   }
 }
